# pyoslc

./: .env  .flaskenv  .gitignore  .gitlab-ci.yml  .pyoslcenv  LICENSE  MANIFEST.in  README.md  initialize.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ workflows/: tests.yml
.github/workflows/: tests.yml
app/: __init__.py  config.py  wsgi.py  wsgi_oslc.py
app/tests/: conftest.py  test_rm.py  test_web.py
app/web/: routes.py
apposlc/: __init__.py  adapter.py  oslc_enabled.py  resource.py  wsgi.py  wsgi_oslc.py
docs/source/: conf.py  creating_an_oslc_api.rst  getting_started.rst  getting_the_code.rst  index.rst  libraries.rst
example/: test.py
examples/: specifications.csv  test.py
oauth/: __init__.py  consumers.py  forms.py  models.py  resources.py  routes.py  server.py  vocabulary.py
pyoslc/: __init__.py  decorators.py  helpers.py  jazz.py  oslc.py  resource.py
pyoslc/model/: factory.py
pyoslc/resources/: factories.py  jazz.py  models.py  requirement.py
pyoslc/rest/: resource.py
pyoslc/serializers/: configxml.py  jazzxml.py
pyoslc/vocabularies/: am.py  cm.py  config.py  core.py  jfs.py  rm.py
pyoslc/vocabulary/: __init__.py  cm.py  config.py  data.py  jazz.py  rm.py  trs.py
pyoslc_oauth/: __init__.py  forms.py  login_manager.py  models.py  resources.py
pyoslc_oauth/routes/: consumer.py  oauth.py
pyoslc_server/: api.py  context.py  wrappers.py
src/pyoslc/: __init__.py  helpers.py
src/pyoslc_oauth/: __init__.py  (+5 more)
tests/: conftest.py
webservice/: MANIFEST.in  config.py  setup.cfg  setup.py  ws-api.py  ws_api.py
(+155 files in other folders)
