[metadata]
name = PyOSLC
version = attr:pyoslc.__version__
url = https://github.com/cslab/pyoslc
project_urls =
    Documentation = https://pyoslc.readthedocs.io
    Source Code = https://github.com/cslab/pyoslc
    Issue Tracker = https://github.com/cslab/pyoslc/issues
license_file = LICENSE
author = Contact Software
author_email = fp@contact.de
maintainer = Contact Software
description = SDK for implementing OSLC API using Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
keywords =
    OSLC
    SDK
    REST
    API
    RDF
    JSON-LD

[options]
packages = find:
;    pyoslc
;    pyoslc_oauth
;    pyoslc_server
; package_dir = = ./pyoslc
package_dir = = src
include_package_data = true
python_requires = >= 2.7

[options.packages.find]
where = src
; where = ./pyoslc
include = pyoslc*
; [pyoslc, pyoslc_oauth, pyoslc_server]
; exclude = example, app, apposlc

[options.entry_points]
console_scripts =
    pyoslc = pyoslc_server.cli:main

[tool:pytest]
minversion = 2.7
testpaths = tests

[coverage:run]
branch = True
source =
    pyoslc
    pyoslc_oauth
    pyoslc_server
    tests

[coverage:paths]
source =
    src
    */site-packages